# clean-code-graphql

./: Cargo.toml
application/: Cargo.toml
application/src/: artist_service.rs  authentication_provider.rs  entity_storage.rs  lib.rs  song_service.rs
domain/src/: artist.rs  genre.rs  lib.rs  song.rs
domain/src/authentication/: permission.rs  user.rs
infrastructure/: Cargo.toml
infrastructure/src/: demo_authentication_provider.rs  lib.rs  memory_storage.rs
presentation/: Cargo.toml
presentation/src/: main.rs
presentation/src/graphapi/: artist.rs  context.rs  genre.rs  mod.rs  mutation.rs  query.rs  song.rs
presentation/src/server/: guards.rs  mod.rs  routes.rs
