[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.10"
juniper_rocket = "0.8.2"
rocket = "0.5.0-rc.2"
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }